--- a/skipper.env
+++ b/skipper.env
@@ -39,6 +39,7 @@ DISABLE_TLS
 MINIKUBE_HOME
 OPENSHIFT_VERSION
 ENABLE_ORG_TENANCY
+ENABLE_OCM_AUTHZ
 ENABLE_ORG_BASED_FEATURE_GATES
 TEST
 ENABLE_EVENT_STREAMING
