MGMT-19080: Enable streched cluster installation in day1

--- a/deploy/olm-catalog/manifests/extensions.hive.openshift.io_agentclusterinstalls.yaml
+++ b/deploy/olm-catalog/manifests/extensions.hive.openshift.io_agentclusterinstalls.yaml
@@ -434,7 +434,7 @@ spec:
                   controlPlaneAgents:
                     description: |-
                       ControlPlaneAgents is the number of matching approved and ready Agents with the control plane role
-                      required to launch the install. Must be either 1 or 3.
+                      required to launch the install. Must be either 1 or 3-5.
                     type: integer
                   workerAgents:
                     description: |-
