NO-ISSUE: Add IBM _watsonx_ flavor to OpenShift AI operator
Currently when we add the _OpenShift AI_ operator we add it with all its
dependencies and the default configuration. This is suitable for most
users, but it brings dependencies that aren't really needed in all
cases. _IBM watsonx_, for example, doesn't require many of the
dependencies. In order to simplify that use case this patch adds support
for a new _flavor_ property. It can have the values `default` and
`watsonx`. When the value is `watsonx` the operator will be installed
without the _pipelines_, _serverless_ and _servicemesh_ dependencies,
and with the following configuration:

```yaml
apiVersion: datasciencecluster.opendatahub.io/v1
kind: DataScienceCluster
metadata:
  name: default-dsc
spec:
  components:
    codeflare:
      managementState: Removed
    dashboard:
      managementState: Removed
    datasciencepipelines:
      managementState: Removed
    kserve:
      managementState: Managed
      defaultDeploymentMode: RawDeployment
      serving:
        managementState: Removed
        name: knative-serving
    kueue:
      managementState: Removed
    modelmeshserving:
      managementState: Removed
    ray:
      managementState: Removed
    trainingoperator:
      managementState: Managed
    trustyai:
      managementState: Removed
    workbenches:
      managementState: Remove
```

The assisted installer UI doesn't support the operator properties
mechanisms, so this needs to be done via the API. For example, the
following Python script creates a new clsuter using the _watsonx_
flavor:

```python
#!/usr/bin/env python3
# -*- coding: utf-8 -*-

import base64
import json
import pathlib
import requests
import subprocess

# Details of the cluster:
name = "mycluster"
base_url = "https://api.openshift.com"
base_dns_domain = "mydomain"
openshift_version = "4.16"
cpu_architecture = "x86_64"

# Find the home directory, as we will take the pull secret and SSH key from there:
home_dir = pathlib.Path.h

--- a/internal/operators/openshiftai/templates/openshift/50_openshift_ai_setup_job.yaml
+++ b/internal/operators/openshiftai/templates/openshift/50_openshift_ai_setup_job.yaml
@@ -16,5 +16,5 @@ spec:
         - /usr/bin/bash
         - -ex
         - -c
-        - {{ executeTemplate "files/setup.sh" . | toString | toJson }}
+        - {{ executeTemplate "include/setup.sh" . | toString | toJson }}
       restartPolicy: Never
