NO-ISSUE: Allow configuring suported GPUs
Currently the OpenShift AI operator only supports NVIDIA GPUs. This
complicates testing in environments where there are no such GPUs. To
simplify that this patch adds a new `OPENSHIFT_AI_SUPPORTED_GPUS`
environment variable that contains the vendor identifiers of the
supported GPUs. By default the value is `10de`, which is the NVIDIA
vendor identifier, so we still only support NVIDIA GPUs by default. But
the value can be a comma separated list of vendor identifiers. For
example, the value `10de,1af4` means that both NVIDIA and Virtio GPUs
are supported. This can be used in the testing environments to be able
to test the operator using virtual GPUs without any real hardware.

Note that this use of Virtio GPUs is intended only for tests: it isn't
possible to actually use those virtual GPUs to run AI workloads.

Related: https://issues.redhat.com/browse/MGMT-19317
Related: https://issues.redhat.com/browse/MGMT-19056
Signed-off-by: Juan Hernandez <juan.hernandez@redhat.com>

--- a/openshift/template.yaml
+++ b/openshift/template.yaml
@@ -222,6 +222,8 @@ parameters:
   value: "false"
 - name: ENVOY_CONFIGMAP_NAME
   value: assisted-service-envoy-config
+- name: OPENSHIFT_AI_SUPPORTED_GPUS
+  value: "10de"
 apiVersion: v1
 kind: Template
 metadata:
@@ -497,6 +499,8 @@ objects:
                 value: ${OPENSHIFT_SUPPORT_LEVEL_API_BASE_URL}
               - name: IGNORED_OPENSHIFT_VERSIONS
                 value: ${IGNORED_OPENSHIFT_VERSIONS}
+              - name: OPENSHIFT_AI_SUPPORTED_GPUS
+                value: ${OPENSHIFT_AI_SUPPORTED_GPUS}
             volumeMounts:
               - name: route53-creds
                 mountPath: "/etc/.aws"
