--- a/data/default_release_images.json
+++ b/data/default_release_images.json
@@ -152,8 +152,8 @@
         "cpu_architectures": [
             "x86_64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.15.38-x86_64",
-        "version": "4.15.38"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.15.39-x86_64",
+        "version": "4.15.39"
     },
     {
         "openshift_version": "4.15",
@@ -161,8 +161,8 @@
         "cpu_architectures": [
             "arm64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.15.38-aarch64",
-        "version": "4.15.38"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.15.39-aarch64",
+        "version": "4.15.39"
     },
     {
         "openshift_version": "4.15-multi",
@@ -173,8 +173,8 @@
             "ppc64le",
             "s390x"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.15.38-multi",
-        "version": "4.15.38-multi"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.15.39-multi",
+        "version": "4.15.39-multi"
     },
     {
         "openshift_version": "4.16",
@@ -182,8 +182,8 @@
         "cpu_architectures": [
             "x86_64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.16.23-x86_64",
-        "version": "4.16.23",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.16.24-x86_64",
+        "version": "4.16.24",
         "default": true
     },
     {
@@ -192,8 +192,8 @@
         "cpu_architectures": [
             "arm64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.16.23-aarch64",
-        "version": "4.16.23"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.16.24-aarch64",
+        "version": "4.16.24"
     },
     {
         "openshift_version": "4.16-multi",
@@ -204,8 +204,8 @@
             "ppc64le",
             "s390x"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.16.23-multi",
-        "version": "4.16.23-multi"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.16.24-multi",
+        "version": "4.16.24-multi"
     },
     {
         "openshift_version": "4.17",
@@ -213,9 +213,9 @@
         "cpu_architectures": [
             "x86_64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.17.5-x86_64",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.17.7-x86_64",
         "support_level": "beta",
-        "version": "4.17.5"
+        "version": "4.17.7"
     },
     {
         "openshift_version": "4.17",
@@ -223,9 +223,9 @@
         "cpu_architectures": [
             "arm64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.17.5-aarch64",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.17.7-aarch64",
         "support_level": "beta",
-        "version": "4.17.5"
+        "version": "4.17.7"
     },
     {
         "openshift_version": "4.17-multi",
@@ -236,9 +236,9 @@
             "ppc64le",
             "s390x"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.17.5-multi",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.17.7-multi",
         "support_level": "beta",
-        "version": "4.17.5-multi"
+        "version": "4.17.7-multi"
     },
     {
         "openshift_version": "4.18",
@@ -246,9 +246,9 @@
         "cpu_architectures": [
             "x86_64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.18.0-ec.3-x86_64",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.18.0-rc.0-x86_64",
         "support_level": "beta",
-        "version": "4.18.0-ec.3"
+        "version": "4.18.0-rc.0"
     },
     {
         "openshift_version": "4.18",
@@ -256,9 +256,9 @@
         "cpu_architectures": [
             "arm64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.18.0-ec.3-aarch64",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.18.0-rc.0-aarch64",
         "support_level": "beta",
-        "version": "4.18.0-ec.3"
+        "version": "4.18.0-rc.0"
     },
     {
         "openshift_version": "4.18-multi",
@@ -269,8 +269,8 @@
             "ppc64le",
             "s390x"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.18.0-ec.3-multi",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.18.0-rc.0-multi",
         "support_level": "beta",
-        "version": "4.18.0-ec.3-multi"
+        "version": "4.18.0-rc.0-multi"
     }
 ]
