--- a/.tekton/assisted-service-saas-main-push.yaml
+++ b/.tekton/assisted-service-saas-main-push.yaml
@@ -343,6 +343,9 @@ spec:
         values:
         - "false"
     - name: sast-snyk-check
+      params:
+      - name: ARGS
+        value: "--project-name=assisted-service --report --org=3e6fd93b-b325-49dd-8a33-432a0160ab66"
       runAfter:
       - clone-repository
       taskRef:
