--- a/deploy/olm-catalog/manifests/agent-install.openshift.io_agents.yaml
+++ b/deploy/olm-catalog/manifests/agent-install.openshift.io_agents.yaml
@@ -2,7 +2,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.6.2
+    controller-gen.kubebuilder.io/version: v0.14.0
   creationTimestamp: null
   name: agents.agent-install.openshift.io
 spec:
@@ -47,14 +47,19 @@ spec:
         description: Agent is the Schema for the hosts API
         properties:
           apiVersion:
-            description: 'APIVersion defines the versioned schema of this representation
-              of an object. Servers should convert recognized schemas to the latest
-              internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+            description: |-
+              APIVersion defines the versioned schema of this representation of an object.
+              Servers should convert recognized schemas to the latest internal value, and
+              may reject unrecognized values.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
             type: string
           kind:
-            description: 'Kind is a string value representing the REST resource this
-              object represents. Servers may infer this from the endpoint the client
-              submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            description: |-
+              Kind is a string value representing the REST resource this object represents.
+              Servers may infer this from the endpoint the client submits requests to.
+              Cannot be updated.
+              In CamelCase.
+              More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
             type: string
           metadata:
             type: object
@@ -64,8 +69,9 @@ spec:
               approved:
                 type: boolean
               clusterDeploymentName:
-                description: ClusterReference represents a Cluster Reference. It has
-                  enough information to retrieve cluster in any namespace
+                description: |-
+                  ClusterReference represents a Cluster Reference. It has enough information to retrieve cluster
+                  in any namespace
                 properties:
                   name:
                     description: Name is unique within a namespace to reference a
@@ -121,7 +127,11 @@ spec:
                   with this agent
                 type: object
               role:
-                description: "HostRole host role \n swagger:model host-role"
+                description: |-
+                  HostRole host role
+
+
+                  swagger:model host-role
                 type: string
             required:
             - approved
@@ -134,8 +144,9 @@ spec:
                 type: boolean
               conditions:
                 items:
-                  description: Condition represents the state of the operator's reconciliation
-                    functionality.
+                  description: |-
+                    Condition represents the state of the operator's
+                    reconciliation functionality.
                   properties:
                     lastHeartbeatTime:
                       format: date-time
@@ -354,7 +365,11 @@ spec:
                     sourceName:
                       type: string
                     sourceState:
-                      description: "SourceState source state \n swagger:model source_state"
+                      description: |-
+                        SourceState source state
+
+
+                        swagger:model source_state
                       type: string
                   type: object
                 type: array
@@ -375,7 +390,11 @@ spec:
                     description: All stages (ordered by their appearance) for this
                       agent
                     items:
-                      description: "HostStage host stage \n swagger:model host-stage"
+                      description: |-
+                        HostStage host stage
+
+
+                        swagger:model host-stage
                       type: string
                     type: array
                   stageStartTime:
@@ -388,7 +407,11 @@ spec:
                     type: string
                 type: object
               role:
-                description: "HostRole host role \n swagger:model host-role"
+                description: |-
+                  HostRole host role
+
+
+                  swagger:model host-role
                 type: string
               validationsInfo:
                 additionalProperties:
@@ -420,5 +443,5 @@ status:
   acceptedNames:
     kind: ""
     plural: ""
-  conditions: []
-  storedVersions: []
+  conditions: null
+  storedVersions: null
