--- a/config/samples/agent-install.openshift.io_v1beta1_agentserviceconfig.yaml
+++ b/config/samples/agent-install.openshift.io_v1beta1_agentserviceconfig.yaml
@@ -172,3 +172,19 @@ spec:
     openshiftVersion: '4.18'
     url: https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/pre-release/4.18.0-rc.2/rhcos-4.18.0-rc.2-s390x-live.s390x.iso
     version: 418.94.202411221729-0
+  - cpuArchitecture: x86_64
+    openshiftVersion: '4.19'
+    url: https://mirror.openshift.com/pub/openshift-v4/x86_64/dependencies/rhcos/pre-release/dev-4.19/rhcos-dev-4.19-x86_64-live.x86_64.iso
+    version: 418.94.202410090804-0
+  - cpuArchitecture: arm64
+    openshiftVersion: '4.19'
+    url: https://mirror.openshift.com/pub/openshift-v4/aarch64/dependencies/rhcos/pre-release/4.18.0-rc.2/rhcos-4.18.0-rc.2-aarch64-live.aarch64.iso
+    version: 418.94.202411221729-0
+  - cpuArchitecture: ppc64le
+    openshiftVersion: '4.19'
+    url: https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/pre-release/4.18.0-rc.2/rhcos-4.18.0-rc.2-ppc64le-live.ppc64le.iso
+    version: 418.94.202411221729-0
+  - cpuArchitecture: s390x
+    openshiftVersion: '4.19'
+    url: https://mirror.openshift.com/pub/openshift-v4/s390x/dependencies/rhcos/pre-release/4.18.0-rc.2/rhcos-4.18.0-rc.2-s390x-live.s390x.iso
+    version: 418.94.202411221729-0
