--- a/data/default_release_images.json
+++ b/data/default_release_images.json
@@ -272,5 +272,38 @@
         "url": "quay.io/openshift-release-dev/ocp-release:4.18.0-rc.2-multi",
         "support_level": "beta",
         "version": "4.18.0-rc.2-multi"
+    },
+    {
+        "openshift_version": "4.19",
+        "cpu_architecture": "x86_64",
+        "cpu_architectures": [
+            "x86_64"
+        ],
+        "url": "quay.io/openshift-release-dev/ocp-release:4.19.0-ec.0-x86_64",
+        "support_level": "beta",
+        "version": "4.19.0-ec.0"
+    },
+    {
+        "openshift_version": "4.19",
+        "cpu_architecture": "arm64",
+        "cpu_architectures": [
+            "arm64"
+        ],
+        "url": "quay.io/openshift-release-dev/ocp-release:4.19.0-ec.0-aarch64",
+        "support_level": "beta",
+        "version": "4.19.0-ec.0"
+    },
+    {
+        "openshift_version": "4.19-multi",
+        "cpu_architecture": "multi",
+        "cpu_architectures": [
+            "x86_64",
+            "arm64",
+            "ppc64le",
+            "s390x"
+        ],
+        "url": "quay.io/openshift-release-dev/ocp-release:4.19.0-ec.0-multi",
+        "support_level": "beta",
+        "version": "4.19.0-ec.0-multi"
     }
 ]
