--- a/data/default_release_images.json
+++ b/data/default_release_images.json
@@ -62,8 +62,8 @@
         "cpu_architectures": [
             "x86_64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.12.67-x86_64",
-        "version": "4.12.67"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.12.70-x86_64",
+        "version": "4.12.70"
     },
     {
         "openshift_version": "4.12",
@@ -92,8 +92,8 @@
         "cpu_architectures": [
             "x86_64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.13.52-x86_64",
-        "version": "4.13.52"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.13.54-x86_64",
+        "version": "4.13.54"
     },
     {
         "openshift_version": "4.13",
@@ -101,8 +101,8 @@
         "cpu_architectures": [
             "arm64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.13.52-aarch64",
-        "version": "4.13.52"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.13.53-aarch64",
+        "version": "4.13.53"
     },
     {
         "openshift_version": "4.13-multi",
@@ -113,8 +113,8 @@
             "ppc64le",
             "s390x"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.13.52-multi",
-        "version": "4.13.52-multi"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.13.53-multi",
+        "version": "4.13.53-multi"
     },
     {
         "openshift_version": "4.14",
@@ -122,8 +122,8 @@
         "cpu_architectures": [
             "x86_64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.14.39-x86_64",
-        "version": "4.14.39"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.14.43-x86_64",
+        "version": "4.14.43"
     },
     {
         "openshift_version": "4.14",
@@ -131,8 +131,8 @@
         "cpu_architectures": [
             "arm64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.14.39-aarch64",
-        "version": "4.14.39"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.14.43-aarch64",
+        "version": "4.14.43"
     },
     {
         "openshift_version": "4.14-multi",
@@ -143,8 +143,8 @@
             "ppc64le",
             "s390x"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.14.39-multi",
-        "version": "4.14.39-multi"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.14.43-multi",
+        "version": "4.14.43-multi"
     },
     {
         "openshift_version": "4.15",
@@ -152,8 +152,8 @@
         "cpu_architectures": [
             "x86_64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.15.36-x86_64",
-        "version": "4.15.36"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.15.41-x86_64",
+        "version": "4.15.41"
     },
     {
         "openshift_version": "4.15",
@@ -161,8 +161,8 @@
         "cpu_architectures": [
             "arm64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.15.36-aarch64",
-        "version": "4.15.36"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.15.41-aarch64",
+        "version": "4.15.41"
     },
     {
         "openshift_version": "4.15-multi",
@@ -173,8 +173,8 @@
             "ppc64le",
             "s390x"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.15.36-multi",
-        "version": "4.15.36-multi"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.15.41-multi",
+        "version": "4.15.41-multi"
     },
     {
         "openshift_version": "4.16",
@@ -182,8 +182,8 @@
         "cpu_architectures": [
             "x86_64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.16.18-x86_64",
-        "version": "4.16.18",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.16.27-x86_64",
+        "version": "4.16.27",
         "default": true
     },
     {
@@ -192,8 +192,8 @@
         "cpu_architectures": [
             "arm64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.16.18-aarch64",
-        "version": "4.16.18"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.16.27-aarch64",
+        "version": "4.16.27"
     },
     {
         "openshift_version": "4.16-multi",
@@ -204,8 +204,8 @@
             "ppc64le",
             "s390x"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.16.18-multi",
-        "version": "4.16.18-multi"
+        "url": "quay.io/openshift-release-dev/ocp-release:4.16.27-multi",
+        "version": "4.16.27-multi"
     },
     {
         "openshift_version": "4.17",
@@ -213,9 +213,9 @@
         "cpu_architectures": [
             "x86_64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.17.2-x86_64",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.17.9-x86_64",
         "support_level": "beta",
-        "version": "4.17.2"
+        "version": "4.17.9"
     },
     {
         "openshift_version": "4.17",
@@ -223,9 +223,9 @@
         "cpu_architectures": [
             "arm64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.17.2-aarch64",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.17.9-aarch64",
         "support_level": "beta",
-        "version": "4.17.2"
+        "version": "4.17.9"
     },
     {
         "openshift_version": "4.17-multi",
@@ -236,9 +236,9 @@
             "ppc64le",
             "s390x"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.17.2-multi",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.17.9-multi",
         "support_level": "beta",
-        "version": "4.17.2-multi"
+        "version": "4.17.9-multi"
     },
     {
         "openshift_version": "4.18",
@@ -246,9 +246,9 @@
         "cpu_architectures": [
             "x86_64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.18.0-ec.2-x86_64",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.18.0-rc.3-x86_64",
         "support_level": "beta",
-        "version": "4.18.0-ec.2"
+        "version": "4.18.0-rc.3"
     },
     {
         "openshift_version": "4.18",
@@ -256,9 +256,9 @@
         "cpu_architectures": [
             "arm64"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.18.0-ec.2-aarch64",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.18.0-rc.3-aarch64",
         "support_level": "beta",
-        "version": "4.18.0-ec.2"
+        "version": "4.18.0-rc.3"
     },
     {
         "openshift_version": "4.18-multi",
@@ -269,8 +269,8 @@
             "ppc64le",
             "s390x"
         ],
-        "url": "quay.io/openshift-release-dev/ocp-release:4.18.0-ec.2-multi",
+        "url": "quay.io/openshift-release-dev/ocp-release:4.18.0-rc.3-multi",
         "support_level": "beta",
-        "version": "4.18.0-ec.2-multi"
+        "version": "4.18.0-rc.3-multi"
     }
 ]
