--- a/.tekton/assisted-service-saas-main-push.yaml
+++ b/.tekton/assisted-service-saas-main-push.yaml
@@ -29,8 +29,10 @@ spec:
     value: .
   - name: build-args
     value:
-    - release={{target_branch}
+    - release={{target_branch}}
     - version={{revision}}
+  - name: build-source-image
+    value: "true"
   pipelineSpec:
     finally:
     - name: show-sbom
@@ -138,9 +140,6 @@ spec:
     - description: ""
       name: CHAINS-GIT_COMMIT
       value: $(tasks.clone-repository.results.commit)
-    - description: ""
-      name: JAVA_COMMUNITY_DEPENDENCIES
-      value: $(tasks.build-container.results.JAVA_COMMUNITY_DEPENDENCIES)
     tasks:
     - name: init
       params:
