--- a/openshift/template.yaml
+++ b/openshift/template.yaml
@@ -218,7 +218,7 @@ parameters:
 - name: DEPLOYMENT_TYPE
   value: "SaaS"
 - name: INSTALLER_CACHE_CAPACITY
-  value: "6442450944"
+  value: "32 GiB"
   required: false
 - name: ENABLE_OKD_SUPPORT
   value: "false"
