MGMT-19748: Configure snyk ignore

--- a/.tekton/assisted-service-saas-main-pull-request.yaml
+++ b/.tekton/assisted-service-saas-main-pull-request.yaml
@@ -348,6 +348,8 @@ spec:
       params:
       - name: ARGS
         value: "--project-name=assisted-service --report --org=3e6fd93b-b325-49dd-8a33-432a0160ab66"
+      - name: IGNORE_FILE_PATHS
+        value: "tools/wait_for_assisted_service.py,tools/deploy_wiremock.py"
       runAfter:
       - clone-repository
       taskRef:
